[maud] Fix unreadable text in akane-blue theme

--- a/app/javascript/styles/akane-blue/variables.scss
+++ b/app/javascript/styles/akane-blue/variables.scss
@@ -41,5 +41,5 @@ $classic-highlight-color: #2b90d9;
   $action-button-color: lighten($classic-base-color, 50%),
   $inverted-text-color: $black,
   $lighter-text-color: darken($classic-base-color, 6%),
-  $light-text-color: darken($classic-primary-color, 40%)
+  $light-text-color: $classic-primary-color
 );
